creat header section

--- a/styles.css/shop.css
+++ b/styles.css/shop.css
@@ -1,1 +1,71 @@
-/* common styles */
+/* header related styles */
+body {
+    font-family: Lato;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+
+.header {
+    background: rgba(229, 84, 115, 0.10);
+
+}
+
+.banner {
+    height: 100vh;
+    width: 1920px;
+    height: 850px;
+    flex-shrink: 0;
+    padding: 30px 50px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.banner-content {
+    max-width: 500px;
+}
+
+.banner-title {
+    color: #272727;
+    font-size: 80px;
+
+    font-weight: bold;
+
+    display: flex;
+    width: 708px;
+    flex-direction: column;
+}
+
+.banner-description {
+    color: rgba(39, 39, 39, 0.60);
+
+    font-size: 18px;
+
+    font-weight: 400;
+    line-height: 30px;
+    display: flex;
+    width: 634px;
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.btn-primary {
+    color: #FFF;
+
+    font-size: 20px;
+   border: 0px;
+    font-weight: 700;
+    display: inline-flex;
+    padding: 20px 43px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 8px;
+    background: #E55473;
+
+}
